[package]
name = "afa-plugin-llm-openai-compat"
version = "0.1.0"
edition = "2021"
description = "OpenAI Chat Completions API-compatible LLM engine adapter. Talks to any service that speaks the /chat/completions shape (OpenAI Chat Completions, Groq, Cerebras, Ollama /v1, LM Studio, llama.cpp, vLLM, freellmapi, etc.)."
license = "Apache-2.0"

[dependencies]
afa-contracts = { path = "../afa-contracts" }
afa-llm = { path = "../afa-llm" }
afa-bus = { path = "../afa-bus" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "net", "io-util"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zeroize = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "test-util"] }
# Used by the "never log secrets" integration test
# to install a `tracing` subscriber that writes to an
# in-memory buffer.
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[example]]
name = "real_provider_smoke"
# Real-vendor smoke test (uses the env-var
# `FREELLMAPI_URL` / `FREELLMAPI_KEY` /
# `FREELLMAPI_MODEL` to talk to a live
# OpenAI-compatible service). Not hermetic;
# `cargo run --example` only.

[[example]]
name = "negative_battery_smoke"
# Negative battery: 6 live-vendor error paths
# (success control, bad key, unknown model,
# oversized context, empty content, invalid
# temperature). Each case is asserted against
# an acceptable-variant list (vendors vary on
# exact wording). Not hermetic; `cargo run
# --example` only.

[[example]]
name = "concurrent_smoke"
# Live-vendor concurrency: fires N parallel
# requests (default 50, override with
# CONCURRENCY=N), asserts all N get distinct
# correlation_ids, all N get Requested +
# Completed bus events, and the per-request
# correlation_id matches. Not hermetic;
# `cargo run --example` only.

[[example]]
name = "vendor_shape_probe"
# Live-vendor shape probe: POSTs one Chat
# Completions request and prints the raw
# response body + a structural diff against
# the 6 keys the adapter expects
# (id/object/created/model/choices/usage).
# Catches silent JSON-shape drift between
# OpenAI and a vendor proxy. Not hermetic;
# `cargo run --example` only.

