[package]
name = "afa-security"
version = "0.1.0"
edition = "2021"
description = "The AFA Security Engine v1: AES-256-GCM seal/unseal with a SQLite-backed receipt store, no I/O outside the kernel's purview."
license = "Apache-2.0"

[dependencies]
afa-contracts = { path = "../afa-contracts" }
# The in-process pub/sub bus — the security engine
# publishes the three audit facts (`SecretSealed`,
# `SecretUnsealed`, `SecretRotated`) on the kernel's
# bus. Switched from `afa-kernel` to `afa-bus` in
# Phase 3 of the security pack: the kernel now
# constructs the engine inside `Kernel::new`, which
# would have created a cyclic dep
# (`afa-kernel → afa-security → afa-kernel`) if the
# bus had stayed in `afa-kernel`. The bus is now a
# leaf crate that both `afa-kernel` and
# `afa-security` depend on, breaking the cycle at
# the architecture level.
afa-bus = { path = "../afa-bus" }
# AEAD (TRD §3.1) — RustCrypto, opensrc-verified
aes-gcm = "0.10"
# Memory zeroing (TRD §3.2) — RustCrypto, opensrc-verified
zeroize = "1"
# SQLite (TRD §3.3) — bundled removes host SQLite version concern
rusqlite = { version = "0.31", features = ["bundled"] }
# Async runtime pieces (TRD §3.4) — `rt` not needed (we don't run a
# runtime here), but `sync` is for the `Mutex<Connection>` guard
tokio = { version = "1", features = ["sync", "macros"] }
# Dyn-compatibility for `SecurityV1` (TRD §3.5)
async-trait = "0.1"
# Engine-only error derives are not needed; `SecurityErrorV1` lives in
# `afa-contracts` (Phase 0). Listed here as a no-op (the derive is on
# the contracts side) for documentation.
# thiserror is intentionally NOT a dep — the engine has no error type
# of its own; it re-exports `SecurityErrorV1`.
# Tracing (TRD §3.7)
tracing = "0.1"
# Serde (TRD §3.8) — needed for the `SecretRef` and the event
# re-exports, even though the events themselves are defined in
# `afa-contracts`.
serde = { version = "1.0", features = ["derive"] }
# Chrono (TRD §3.9) — used for the `created_at` column timestamps
# in `SealedSecretStore` and for the event timestamps in Phase 2.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Random nonce generation — used by `crypto::seal`. The `rand`
# crate is re-exported by `aes-gcm`'s `aead` feature, so we list it
# directly to make the dependency explicit.
rand = "0.8"
# Pure-Rust hex decoder — used by `master_key::MasterKey::from_hex`
# (the env-var reader hands the env-var string straight to
# `from_hex`, so the engine itself never holds the hex form).
hex = "0.4"

[dev-dependencies]
# In-memory temp dirs for the SQLite file in tests.
tempfile = "3"
# JSON serialization for the property tests in Phase 2.
serde_json = "1"
# `tokio::test` and friends for the async engine tests.
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "test-util"] }
# Mock HTTP server for the LLM-style integration test
# (`tests/llm_integration.rs`). Used to stand up a
# fake HTTP target that the security engine's
# `seal` → `unseal` → `Authorization: Bearer <unsealed>`
# pipeline points at. Picked over `httpmock` (see
# `tests/llm_integration.rs` opening comment) for the
# test-only request-recording API and the native
# tokio-friendly async server.
wiremock = "0.6"
# The `Kernel` type, used by the LLM-style integration
# test to spin up a fully-wired `SecurityEngine`
# without going through the kernel's own test
# fixtures. The test is in this crate, so this is
# a `dev-dependency` — the production
# `afa-security` crate does not depend on
# `afa-kernel` (the cycle was broken in Phase 3
# by extracting the bus to `afa-bus`).
afa-kernel = { path = "../afa-kernel" }
