[package]
name = "afa-security"
version = "0.1.0"
edition = "2021"
description = "The AFA Security Engine v1: AES-256-GCM seal/unseal with a SQLite-backed receipt store, no I/O outside the kernel's purview."
license = "Apache-2.0"

[dependencies]
afa-contracts = { path = "../afa-contracts" }
# Phase 0.5a: the new shared SQLite wrapper. The
# security engine now uses `afa_storage::Storage`
# directly (no more `SealedSecretStore`); this
# Cargo.toml adds `afa-storage` as a direct dep.
# The `rusqlite` dep stays (the engine writes its
# own SQL via `Storage::with_conn`, which hands
# out a `&mut rusqlite::Connection`).
afa-storage = { path = "../afa-storage" }
# The in-process pub/sub bus — the security engine
# publishes the three audit facts (`SecretSealed`,
# `SecretUnsealed`, `SecretRotated`) on the kernel's
# bus. Switched from `afa-kernel` to `afa-bus` in
# Phase 3 of the security pack: the kernel now
# constructs the engine inside `Kernel::new`, which
# would have created a cyclic dep
# (`afa-kernel → afa-security → afa-kernel`) if the
# bus had stayed in `afa-kernel`. The bus is now a
# leaf crate that both `afa-kernel` and
# `afa-security` depend on, breaking the cycle at
# the architecture level.
afa-bus = { path = "../afa-bus" }
# AEAD (TRD §3.1) — RustCrypto, opensrc-verified
aes-gcm = "0.10"
# Memory zeroing (TRD §3.2) — RustCrypto, opensrc-verified
zeroize = "1"
# SQLite (TRD §3.3) — bundled removes host SQLite version concern.
# **Doc drift correction #6 vs. the IMPL draft**:
# the IMPL said to remove this dep (since the
# I/O is in `afa-storage`), but the engine still
# needs the `rusqlite` types for its SQL
# (`query_row`, `execute`, `Transaction`,
# `TransactionBehavior`, `params!`).
rusqlite = { version = "0.31", features = ["bundled"] }
# Async runtime pieces (TRD §3.4) — the
# `tokio::sync::Mutex` in `afa_storage::Storage`
# is a `tokio` mutex; the engine's `seal` /
# `unseal` / `rotate` / `lookup_hash` methods
# are `async fn` and `.await` the `with_conn`
# future.
tokio = { version = "1", features = ["sync", "macros"] }
# Dyn-compatibility for `SecurityV1` (TRD §3.5)
async-trait = "0.1"
# Engine-only error derives are not needed; `SecurityError` lives in
# `afa-contracts` (Phase 0). Listed here as a no-op (the derive is on
# the contracts side) for documentation.
# thiserror is intentionally NOT a dep — the engine has no error type
# of its own; it re-exports `SecurityError`.
# Tracing (TRD §3.7)
tracing = "0.1"
# Serde (TRD §3.8) — needed for the `SecretRef` and the event
# re-exports, even though the events themselves are defined in
# `afa-contracts`.
serde = { version = "1.0", features = ["derive"] }
# Chrono (TRD §3.9) — used for the `created_at` column timestamps
# in `sealed_secrets` and for the event timestamps in Phase 2.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Random nonce generation — used by `crypto::seal`. The `rand`
# crate is re-exported by `aes-gcm`'s `aead` feature, so we list it
# directly to make the dependency explicit.
rand = "0.8"
# Pure-Rust hex decoder — used by `master_key::MasterKey::from_hex`
# (the env-var reader hands the env-var string straight to
# `from_hex`, so the engine itself never holds the hex form).
hex = "0.4"
# SHA-256 (TRD §3.10) — used by `lookup_hash` and the
# new `sha256` column the engine writes in `seal` /
# `rotate` (Phase 0.5b). The hash is stored as a
# lowercase hex string (64 chars), not raw bytes, so
# the constant-time compare in `lookup_hash` can
# short-circuit on length without a second decode.
sha2 = "0.10"

[dev-dependencies]
# In-memory temp dirs for the SQLite file in tests.
tempfile = "3"
# JSON serialization for the property tests in Phase 2.
serde_json = "1"
# `tokio::test` and friends for the async engine tests.
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "test-util", "rt-multi-thread"] }
# Mock HTTP server for the LLM-style integration test
# (`tests/llm_integration.rs`). Used to stand up a
# fake HTTP target that the security engine's
# `seal` → `unseal` → `Authorization: Bearer <unsealed>`
# pipeline points at. Picked over `httpmock` (see
# `tests/llm_integration.rs` opening comment) for the
# test-only request-recording API and the native
# tokio-friendly async server.
wiremock = "0.6"
# The `Kernel` type, used by the LLM-style integration
# test to spin up a fully-wired `SecurityEngine`
# without going through the kernel's own test
# fixtures. The test is in this crate, so this is
# a `dev-dependency` — the production
# `afa-security` crate does not depend on
# `afa-kernel` (the cycle was broken in Phase 3
# by extracting the bus to `afa-bus`).
afa-kernel = { path = "../afa-kernel" }
